--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myntra</title>
     <link rel="icon" href="logo1.png">
-    <link rel="stylesheet" href="myntra.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
